# PaperPie

./: .gitignore  README.md  com.tenderowl.paperpie.json  meson.build
data/: com.tenderowl.paperpie.desktop.in  com.tenderowl.paperpie.gschema.xml  com.tenderowl.paperpie.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: draft_page.py  inbox_page.py  letter.py  letter_row.py  letters_column.py  main.py  meson.build  paperpie.gresource.xml  paperpie.in  reminders_page.py  styles.css  todo_page.py  view_stack.py  window.py
src/ui/: draft_page.blp  inbox_page.blp  letter_row.blp  letters_column.blp  reminders_page.blp  todo_page.blp  view_stack.blp  window.blp
